fix: resolve image overlap in gallery by correcting grid-row-end and removing duplicate code

--- a/_sass/_gallery.scss
+++ b/_sass/_gallery.scss
@@ -105,7 +105,7 @@
   
   // For browsers without masonry, row span set by JavaScript
   @supports not (grid-template-rows: masonry) {
-    grid-row-end: span auto;
+    grid-row-end: span 1;
   }
   
   &:hover {
